Fix for popup forms on mobile

--- a/wp-content/themes/giger-kms/src/sass/_widgets.scss
+++ b/wp-content/themes/giger-kms/src/sass/_widgets.scss
@@ -429,56 +429,72 @@
 .tst-formpopup-block {
 	
 	.tst-formpopup-trigger {
-		@include button(red);
-		cursor: pointer;
+		@include for(medium-screens) {
+			@include button(red);
+			cursor: pointer;
+		}
+		
+		@include upto(medium-screens) {
+			@include post-title(multiline);
+			margin: 1.5em 0 $margin-base;	
+		}
 	}
 }
 
-.tst-formpopup-modal {	
-	display: none;
-	box-sizing: border-box;
-	background-color: $color-white;
-	border-radius: 2px;
+
+.tst-formpopup-modal {
 	
-	position: fixed;
-	width: 90%;	
-	@include for(medium-screns) { width: 80%; }
-	max-width: 780px;
-	@include calc(height, '100% - 40px');
-		
-	.tst-fpm-close {
-		background: $color-link-three;
-		color: $color-white;
-		width: 28px;
-		height: 28px;
-		border-radius: 50%;
-		
-		position: absolute;
-		top: -16px;
-		right: -16px;
-		text-align: center;
-		cursor: pointer;
-				
-		.svg-icon {
-			width: 12px;
-			height: 12px;
-			fill: $color-white;
-			pointer-events: none;
-			position: absolute;
-			top: 8px;
-			left: 8px;
-		}
+	@include upto(medium-screens) {
+		.tst-fpm-close { display: none; }
+		display: block !important;
+		position: static !important;
+		left: auto !important;
+		top: auto !important;
+		margin: 0 !important;		
 	}
-		
-	.tst-fpm-frame {
+	
+	@include for(medium-screens) {
+		display: none;
 		box-sizing: border-box;
-		width: 100%;
-		height: 100%;
-		padding: $base;
-		overflow-y: scroll;
-	}
-	
-	.tst-fpm-flow {		
+		background-color: $color-white;
+		border-radius: 2px;
 		
+		position: fixed;
+		width: 90%;	
+		@include for(medium-screns) { width: 80%; }
+		max-width: 780px;
+		@include calc(height, '100% - 40px');
+			
+		.tst-fpm-close {
+			background: $color-link-three;
+			color: $color-white;
+			width: 28px;
+			height: 28px;
+			border-radius: 50%;
+			
+			position: absolute;
+			top: -16px;
+			right: -16px;
+			text-align: center;
+			cursor: pointer;
+					
+			.svg-icon {
+				width: 12px;
+				height: 12px;
+				fill: $color-white;
+				pointer-events: none;
+				position: absolute;
+				top: 8px;
+				left: 8px;
+			}
+		}
+			
+		.tst-fpm-frame {
+			box-sizing: border-box;
+			width: 100%;
+			height: 100%;
+			padding: $base;
+			overflow-y: scroll;
+		}
 	}
 }
